# sdre-rust-adsb-parser

./: .dictionary.txt  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  json_parser.py  renovate.json
.github/: dependabot.yaml
.github/workflows/: deploy.yaml  pre-commit-updates.yaml
examples/: dump-adsb-frames.rs  sdre-rust-adsb-tester.rs  state-machine.rs
src/: json.rs  lib.rs
src/data_structures/: airplane.rs  decoder_common.rs
src/decoders/: aircraftjson.rs  beast.rs  json.rs  raw.rs  rawtojson.rs
src/decoders/beast_helpers/: beast_mlat.rs  messagetype.rs
src/decoders/beast_types/: messagetype.rs
src/decoders/common_types/: heading.rs  sda.rs  speed.rs  surveillancestatus.rs
src/decoders/errors/: conversion.rs
src/decoders/helpers/: cpr_calculators.rs  prettyprint.rs  time.rs
src/decoders/json_types/: adsbversion.rs  altimeter.rs  altitude.rs  barorate.rs  calculatedbestflightid.rs  dbflags.rs  emergency.rs  emmittercategory.rs  flightstatus.rs  geometricverticalaccuracy.rs  heading.rs  lastknownposition.rs  latitude.rs  longitude.rs  messagetype.rs  meters.rs  mlat.rs  nacp.rs  nacv.rs  navigationmodes.rs  receivedmessages.rs  secondsago.rs  signalpower.rs  sil.rs  sourceintegritylevel.rs  speed.rs  squawk.rs  timestamp.rs  tisb.rs  transponderhex.rs
src/decoders/raw_helpers/: ac13field.rs  adsb.rs  adsbversion.rs  airbornevelocity.rs  airbornevelocitysubfields.rs  airbornevelocitysubtype.rs  airbornevelocitytype.rs  aircraftstatus.rs  aircraftstatustype.rs  airspeeddecoding.rs  altitude.rs  bds.rs  capability.rs  capabilityclassairborne.rs  capabilityclasssurface.rs  controlfield.rs  controlfieldtype.rs  cprheaders.rs  datalinkcapability.rs  df.rs  direction_nsew.rs  downlinkrequest.rs  emergencystate.rs  flightstatus.rs  groundspeeddecoding.rs  helper_functions.rs  icao.rs  identification.rs  identitycode.rs  ke.rs  me.rs  operationalmode.rs  operationcodesurface.rs  operationstatus.rs  operationstatusairborne.rs  operationstatussurface.rs  sign.rs  signbitgnssbaroaltitudesdiff.rs  signbitverticalrate.rs  sourcebitverticalrate.rs  (+8 more)
src/decoders/raw_types/: ac13field.rs  adsb.rs  adsbversion.rs  airbornevelocity.rs  airbornevelocitysubfields.rs  airbornevelocitysubtype.rs  airbornevelocitytype.rs  aircraftstatus.rs  aircraftstatustype.rs  airspeeddecoding.rs  altitude.rs  autopilot_modes.rs  bds.rs  capability.rs  capabilityclassairborne.rs  capabilityclasssurface.rs  controlfield.rs  controlfieldtype.rs  cprheaders.rs  datalinkcapability.rs  df.rs  direction_nsew.rs  downlinkrequest.rs  emergencystate.rs  flightstatus.rs  fms.rs  groundspeed.rs  groundspeeddecoding.rs  heading.rs  helper_functions.rs  icao.rs  identification.rs  identitycode.rs  ke.rs  me.rs  modevalidity.rs  noposition.rs  operationalmode.rs  operationcodesurface.rs  operationstatus.rs  (+14 more)
src/error_handling/: adsb_beast_error.rs  adsb_json_error.rs  adsb_raw_error.rs  deserialization_error.rs
src/helpers/: encode_adsb_beast_input.rs  encode_adsb_json_input.rs  encode_adsb_raw_input.rs
src/state_machine/: state.rs
test_data/: aircraft_1.json  aircraft_2.json  aircraft_3.json  aircraft_4.json  aircraft_5.json  aircraft_6.json  json_1.json  json_2.json  json_3.json
