[package]
name = "sdre-rust-adsb-parser"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["Fred Clausen"]
documentation = "https://github.com/sdr-enthusiasts/sdre-rust-adsb-parser"
homepage = "https://github.com/sdr-enthusiasts/sdre-rust-adsb-parser"
repository = "https://github.com/sdre-enthusiasts/sdre-rust-adsb-parser"
readme = "README.md"
keywords = ["sdr", "adsb", "parser", "beast", "raw", "json", "readsb", "rtlsdr"]
license = "MIT"
rust-version = "1.75.0"
description = "A Rust library for parsing ADS-B messages from a Beast, JSON or raw data stream."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", optional = true }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
sdre-rust-logging = "0.3.2"
deku = { version = "0.16.0", optional = true }
custom_error = "1.9.2"
libm = { version = "0.2.8", optional = true }
radix_fmt = "1.0.0"
derive_builder = "0.20.0"
chrono = "0.4.38"
easy-cast = "0.5.2"
anyhow = "1.0.86"

[dev-dependencies]
generic-async-http-client = { version = "0.5.1", features = ["use_hyper"] }
sdre-stubborn-io = "0.5.5"
rocket = { version = "0.5.0", features = ["json"] }

[features]
default = ["json", "raw", "beast"]
json = []
raw = ["dep:deku", "dep:hex", "dep:libm"]
beast = ["raw"]

[profile.release]
lto = true
